--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
             android:parentActivityName=".mainView.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
+        <activity
+            android:name=".settingsView.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".mainView.MainActivity"
+            android:theme="@style/WhiteText">
+        </activity>
+
     </application>
 
 </manifest>
