--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".mainView.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,14 +31,14 @@
             android:name=".audioFilesView.AudioFilesActivity"
             android:label="@string/title_activity_audio_files"
             android:parentActivityName=".mainView.MainActivity"
-            android:theme="@style/WhiteText">
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
 
         <activity
             android:name=".settingsView.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".mainView.MainActivity"
-            android:theme="@style/WhiteText">
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
 
         <service
