--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'udacity'
+            keyPassword 'udacity'
+            storeFile file("$rootDir/keystore.jks")
+            storePassword 'udacity'
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.grzegorzkwasniewski.speakloududacity"
@@ -14,72 +22,61 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-
     // AdMob
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
-
     // Butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     // Firebase Analytics
     implementation 'com.google.firebase:firebase-core:16.0.1'
-
     //Provides AndroidJUnitRunner
-    androidTestCompile ('com.android.support.test:runner:0.4.1') {
+    androidTestCompile('com.android.support.test:runner:0.4.1') {
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude module: 'recyclerview-v7'
         exclude module: 'support-annotations'
     }
     // Provides JUnit 4 rules
-    androidTestImplementation ('com.android.support.test:rules:0.4.1') {
+    androidTestImplementation('com.android.support.test:rules:0.4.1') {
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude module: 'recyclerview-v7'
         exclude module: 'support-annotations'
     }
     // Builds and runs Espresso tests
-    androidTestImplementation  ('com.android.support.test.espresso:espresso-core:2.2.1') {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.1') {
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude module: 'recyclerview-v7'
         exclude module: 'support-annotations'
     }
-
-    androidTestImplementation  ('com.android.support.test.espresso:espresso-intents:2.2.1') {
+    androidTestImplementation('com.android.support.test.espresso:espresso-intents:2.2.1') {
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude module: 'recyclerview-v7'
         exclude module: 'support-annotations'
     }
-
-    androidTestImplementation  ('com.android.support.test.espresso:espresso-contrib:2.2.1') {
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:2.2.1') {
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude module: 'recyclerview-v7'
         exclude module: 'support-annotations'
     }
-
-    testImplementation  'com.android.support:support-annotations:25.3.1'
-
-    testImplementation  'junit:junit:4.12'
-
-
+    testImplementation 'com.android.support:support-annotations:25.3.1'
+    testImplementation 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
