--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     // Butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    // Dependency injection
+    implementation 'com.google.dagger:dagger:2.14.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
     // Firebase Analytics
     implementation 'com.google.firebase:firebase-core:16.0.1'
     //Provides AndroidJUnitRunner
