--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,27 +19,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".recordingView.RecordingActivity"
             android:label="@string/title_activity_recording"
             android:parentActivityName=".mainView.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".audioFilesView.AudioFilesActivity"
             android:label="@string/title_activity_audio_files"
             android:parentActivityName=".mainView.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".settingsView.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".mainView.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <service
             android:name=".services.RecordService"
@@ -50,12 +44,17 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/speak_loud_widget_info" />
+
         </receiver>
 
         <provider
             android:name=".DatabaseContent.AppContentProvider"
             android:authorities="com.example.grzegorzkwasniewski.speakloududacity.DatabaseContent.AppContentProvider"
-        android:exported="false" />
+            android:exported="false" />
     </application>
 
 </manifest>
