--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
 
         </receiver>
 
+        <service android:name=".widget.StackWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
         <provider
             android:name=".DatabaseContent.AppContentProvider"
             android:authorities="com.example.grzegorzkwasniewski.speakloududacity.DatabaseContent.AppContentProvider"
